New examples `permutations-app` and `triangular-app` demonstrate using `clj-otel-adapter-logback` with and without the instrumentation agent.
- [FIX] Prevent initialization of global OpenTelemetry instance during programmatic build of OTLP exporter.
- [FIX] Unwrap attribute values returned by `attributes/->map`
- [MAINT] For attribute array values, collect eagerly (vector) rather than lazily (list)
- [MAINT] Deprecated Zipkin exporter, Jaeger and OpenTracing propagation protocol namespaces, to reflect their status in the OpenTelemetry specification.
These will be removed in a future release.
- [MAINT] Deprecated individual JVM metrics observers in favour of general `RuntimeMetrics` in `clj-otel-instrumentation-runtime-telemetry-java*` modules.
- Bump deps
* [MAINT] OpenTelemetry `1.59.0`, semconv `1.39.0`, instrumentation `2.25.0`

=== `0.2.10` (2025-10-11)

- [FIX] Fixed some cases where HTTP route data was not set correctly when using the instrumentation agent.
- [FIX] Updated some defs to improve GraalVM native-image compatibility.
- [FIX] Updated docs and examples to use `otel.service.name` system property rather than `otel.resource.attributes` to add service name to resource.
- [ADD] Logs API support.
This enables a logging library to emit log records.
The Logs API is not intended for use by an application or general library.
- [ADD] `LoggerProvider` support in programmatic configuration of the SDK.
- [ADD] By default, populate span attribute for source code column number.
- [ADD] New options on `steffan-westcott.clj-otel.sdk.autoconfigure/init-otel-sdk!` to customise SDK components.
- Bump deps
* [MAINT] OpenTelemetry `1.54.1`, instrumentation `2.20.1`

=== `0.2.9` (2025-09-15)

- [FIX] [BREAK] Added option `:set-bound-context?` to `server-span-interceptors`, with default `false`.
Previously, bound context was always set, which prevented correct use of current context in subsequent processing.