@@ -2,7 +2,6 @@
 
 {:paths   ["src" "resources"]
  :deps    {org.clojure/clojure {:mvn/version "1.10.3"}
-           camel-snake-kebab/camel-snake-kebab {:mvn/version "0.4.3"}
            io.opentelemetry/opentelemetry-api {:mvn/version "1.59.0"}
            io.opentelemetry.instrumentation/opentelemetry-instrumentation-api {:mvn/version "2.25.0"}
            io.opentelemetry.semconv/opentelemetry-semconv {:mvn/version "1.39.0"}
